# apicov

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  pyproject.toml
src/apicov/: __init__.py  cli.py  func_tracer.py  html.py  sysmon.py  type_annotation.py  type_recorder.py
src/apicov/templates/: coverage_report.html
tests/: test_type_annotation.py
