[project]
name = "apicov"
version = "0.0.1"
description = "API coverage tool for Python"
readme = "README.rst"
authors = [
    { name = "Taras Radchenko", email = "petuzk.dev@gmail.com" }
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.12"
dependencies = [
    "rich>=14.3.2",
    "typing-inspect>=0.9.0",
]

[project.urls]
Source = "https://github.com/petuzk/apicov"

[project.scripts]
apicov = "apicov.cli:main"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 120
